2019-12-30  Akira Kakuto  <kakuto@w32tex.org>

	* utils.c: Not include poppler-config.h, by assuming that
	POPPLER_VERSION is defined properly.

2019-12-10  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* am/pdftex.am (pdftex_ch_srcs): add zlib-fmt.ch.

2019-11-25  Joseph Wright  <joseph.wright@morningstar2.co.uk>

	* pdftex.web: New primitive \pdfmajorversion.
	(pdf_major_version_code, pdf_major_version, print_param,
         <Put each...>): housekeeping.
	(<Initialize table entries...>): default 1.
	(<Glob...>): fixed_pdf_major_version.
	(pdf_version_written, <Set init...>): rename from
	pdf_minor_version_written.
	(check_pdfversion): rename from check_pdfminorversion,
	and also check pdf_major_version for sanity, and set the fixed_ value,
	and use pdf_major_version in the %PDF- line.
	(pdf_begin_obj, pdf_begin_dict, <Initialize variables ...>,
	 <Implement \.{\\pdfximage}>): change call to check_pdfversion. 
	<Undump pdftex data>: undump pdf_major_version.
	(scan_image): include pdf_major_version in call to read_image.
	* pdftoepdf.cc (read_pdf_info): new arg major_pdf_version_wanted,
	and check it when including PDF.
	* ptexlib.h (readimage, undumpimagemeta): new integer args in decl.
	* writeimg.c (readimage, undumpimagemeta): new arg
	pdfmajorversion, and check it.
	* writepng.c (read_png_info): check fixedpdfmajorversion
	along with fixedpdfminorversion for various png color attributes.

2019-08-06  Karl Berry  <karl@freefriends.org>

	* tests/cnfline.test,
	* tests/cnfline.tex: new files.
	* am/pdftex.am (pdftex_tests): add pdftexdir/tests/cnfline.test.
	(cnfline.log): depend on pdftex$(EXEEXT).

2019-05-08  Akira Kakuto  <kakuto@w32tex.org>

	* writeimg.c: Use a new function find_input_file() to find
	an image file.
	A report in tex-k list:
	https://tug.org/pipermail/tex-k/2019-May/003014.html

2019-05-03  Akira Kakuto  <kakuto@w32tex.org>

	* pdftosrc-poppler0.76.0.cc, pdftoepdf-poppler0.76.0.cc:
	Added to support system poppler 0.76.[01].
